# vertino

./: .clauderules  .gitignore  CLAUDE.md  README.md  factory_blueprint.md  pyproject.toml  pyrightconfig.json
.claude/: settings.local.json
.claude/skills/: generators.py  llm_enricher.py  prd_to_factory.py  run_harness_tests.py
.github/workflows/: ci.yml
.husky/: pre-commit
agent_runtime/memory/: __init__.py
agent_runtime/policy_engine/: filesystem_policy.py  import_policy.py
agent_runtime/specifications/: api_contract.yaml  architecture_policy.yaml  domain_spec.yaml  sindorim_vertiport_domain_spec.yaml  sindorim_vertiport_workflow_spec.yaml
docs/agent_guides/: engineer.md  planner.md  reviewer.md
docs/agent_guides/vertiport/: aero_structure.md  compliance_ols.md  operation_flow.md  spatial_layout.md  supervisor.md
docs/prd/: vertiport_prd.md
harness_engine/: __init__.py
harness_engine/agents/: __init__.py  engineer.py  planner.py  reviewer.py
harness_engine/graph/: __init__.py  hitl.py  routing.py  workflow.py
harness_engine/services/: __init__.py  artifact_writer.py  drift_detector.py  prompt_loader.py  replay_store.py  sandbox_runner.py  spec_loader.py  telemetry.py
harness_engine/state/: __init__.py  ephemeral_state.py  failure_types.py  persistent_state.py
infrastructure/: __init__.py
infrastructure/adapters/: __init__.py
infrastructure/adapters/aider/: __init__.py
infrastructure/adapters/claude/: __init__.py
infrastructure/adapters/openai/: __init__.py
my-harness-platform/: .generated_manifest.json
my-harness-platform/tests/harnesses/: test_no_coordinate_mutation_in_auditors.py
my-harness-platform/tests/unit/: test_layout_schema.py  (+2 more)
(+1 files in other folders)
