[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-automation-factory"
version = "0.1.0"
description = "Spec-driven enterprise-grade autonomous software factory built on LangGraph."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Harness Automation Factory" }
]
license = { text = "Proprietary" }
keywords = ["langgraph", "spec-driven", "ai-factory", "sandbox", "drift-detection"]

dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.6.0",
    "docker>=7.0.0",
    "pyyaml>=6.0.1",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "typing-extensions>=4.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "black>=24.3.0",
]

[project.scripts]
harness-factory = "harness_engine.graph.workflow:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["harness_engine*", "agent_runtime*", "infrastructure*"]
exclude = ["my-harness-platform*", "storage*", "tests*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["my-harness-platform/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pyrefly]
search-path = [
    ".",
    ".claude/skills"
]
